--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 
 
 body {
-	margin: 20px;
+	margin: 10px;
 	font-family: 'Lato';
-	color: #333;
+	color: #ffffff;
+	background-color: #403e3e;
 }
 /* icontienda */
 .icon-cart {
@@ -19,122 +20,249 @@ body {
 img {
 	max-width: 100%;
 }
-
-/* Header */
-header {
+/* iconnadvar */
+.logo {
 	display: flex;
-	justify-content: space-between;
-	padding: 30px 0 40px 0;
-	background-color: #f6ff00;
-	margin-bottom: 20px;
-	border-radius: 20px;
-}
-h1 {
-    
-    display: flex;
 	justify-content: center;
+	align-items: start;
+	font-family: Arial, sans-serif;
+	font-size: 48px;
+	font-weight: bold;
+	color: #ffffff;
+	text-transform: uppercase;
+	letter-spacing: 8px;
+	animation: fadeInOut 2s infinite;
+  }
+  
+  .logo-text {
+	opacity: 0;
+	animation: fadeInOut 2s infinite;
+	animation-delay: calc(0.2s * var(--index));
+  }
+  
+  @keyframes fadeInOut {
+	0% {
+	  opacity: 0;
+	}
+	50% {
+	  opacity: 1;
+	}
+	100% {
+	  opacity: 0;
+	}
+  }
+  
+  
+/* navbar */
+
+.container_nav {
+	display: flex;
+	justify-content: center; /* Centrar el contenido horizontalmente */
 	align-items: center;
-	margin: 20px;
+	background-color: #00ff0d;
+	width: 100%;
+	height: 40px;
+
+  }
+  
+  .navbar-brand {
+	font-size: 24px;
+	font-weight: bold;
+	animation: fadeInOut 2s ease infinite; /* Animación de desvanecimiento */
+  }
+  
+  .navbar-links {
+	display: flex;
+	gap: 20px;
+  }
+  
+  .navbar-links a {
+	color: #000; /* Color de texto inicial */
+	text-decoration: none;
+	font-size: 16px;
+	font-family: 'Courier New', monospace; /* Fuente estilo 'typewriter' para dar un toque especial */
+  }
+  
+  @keyframes fadeInOut {
+	0% {
+	  opacity: 0; /* Inicio de la animación con opacidad 0 */
+	}
+	50% {
+	  opacity: 1; /* Mitad de la animación con opacidad 1 */
+	}
+	100% {
+	  opacity: 0; /* Fin de la animación con opacidad 0 */
+	}
+  }
+  
+  
+  
+  
+/* Header */
+.container-icon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 10px;
+	background-color: #88BE4C;
+	width: 100%;
+	height: 40px;
+	border-radius: 40px;
+	position: relative;
+	margin-bottom: 50px;
 }
 
-.container-icon {
+.container-icon h1 {
+	font-size: 24px;
+	margin-right: 20px;
+	color: #ffffff;
+	animation: slideIn 1s ease-in-out;
+}
+
+@keyframes slideIn {
+	0% {
+		transform: translateX(-100%);
+	}
+	100% {
+		transform: translateX(0);
+	}
+}
+.container-cart-products {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	background-color: #000000;
+  }
+  
+.container-cart-icon {
 	position: relative;
+	cursor: pointer;
+	animation: scaleIn 1s ease-in-out;
+}
+
+@keyframes scaleIn {
+	0% {
+		transform: scale(0);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+
+.icon-cart {
+	width: 24px;
+	height: 24px;
+	margin-right: 5px;
+	fill: #8C1414;
+	animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 .count-products {
 	position: absolute;
-	top: 55%;
-	right: 0;
-
-	background-color: #000;
-	color: #fff;
-	width: 25px;
-	height: 25px;
-
-	display: flex;
-	justify-content: center;
-	text-align: center;
+	top: -5px;
+	right: -5px;
+	background-color: #8C1414;
+	width: 18px;
+	height: 18px;
 	border-radius: 50%;
-}
-
-#contador-productos {
-	font-size: 12px;
-
-}
-
-.container-cart-products {
-	position: absolute;
-	top: 50px;
-	right: 0;
-	text-align: center;
-
-	background-color: #0da834;
-	width: 400px;
-	z-index: 1;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-	border-radius: 10px;
-}
-
-.cart-product {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 30px;
-
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.info-cart-product {
-	display: flex;
-	justify-content: space-between;
-	flex: 0.8;
-}
-
-.titulo-producto-carrito {
-	font-size: 20px;
-}
-
-.precio-producto-carrito {
-	font-weight: 200px;
-	font-size: 20px;
-	margin-left: 10px;
-}
-
-.cantidad-producto-carrito {
-	font-weight: 400;
-	font-size: 20px;
-}
-
-.icon-close {
-	width: 25px;
-	height: 25px;
-}
-
-.icon-close:hover {
-	stroke: rgb(255, 0, 0);
-	cursor: pointer;
-}
-
-.cart-total {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 20px 0;
-	gap: 20px;
+	animation: fadeIn 1s ease-in-out;
 }
 
-.cart-total h3 {
-	font-size: 20px;
-	font-weight: 700;
-}
-
-.total-pagar {
-	font-size: 20px;
-	font-weight: 900;
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+		transform: scale(0);
+	}
+	100% {
+		opacity: 1;
+		transform: scale(1);
+	}
 }
 
 .hidden-cart {
 	display: none;
+}
+
+
+.info-cart-product {
+	
+	background-color:#000000;
+	
+}
+
+.cantidad-producto-carrito {
+	font-size: 16px;
+	margin-right: 10px;
+	color: #ffffff;
+}
+.row-product {
+	display: flex;
+	flex-direction: column; /* Organizar los elementos hacia abajo en orden inverso */
+}
+
+
+.titulo-producto-carrito {
+	font-size: 16px;
+	margin-right: 10px;
+	color: #ffffff;
+}
+
+.precio-producto-carrito {
+	font-size: 16px;
+	color: #00ff1e;
+}
+
+.icon-close {
+	width: 100%;
+	height: 20px;
+	cursor: pointer;
+	color: #ff0000;
+	animation: rotate 1s ease-in-out infinite;
+}
+
+.titulo-producto-carrito {
+	font-size: auto;
+	color: #ff0000;
+}
+
+.cart-total {
+text-align: center;
+    
+   
+   
+   
+}
+
+.total-pagar {
+	font-size: 16px;
+}
+
+.btn-clear-all {
+	background-color: #8C1414;
+	color: #ff0000;
+	border: none;
+	padding: 10px 15px;
+	font-size: 16px;
+	cursor: pointer;
+	animation: slideIn 1s ease-in-out;
+}
+
+.cart-empty {
+	color: #333;
+	font-style: italic;
+	animation: fadeIn 1s ease-in-out;
 }
 
 /* Productos */
@@ -164,20 +292,10 @@ h1 {
 	transition: all 0.5s;
 }
 
-.item figure {
-	overflow: hidden;
-}
+
 
 .item:hover img {
 	transform: scale(1.2);
-}
-
-.info-product {
-	padding: 15px 30px;
-	line-height: 2;
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
 }
 
 .price {
@@ -203,7 +321,12 @@ h1 {
 .hidden {
 	display: none;
 }
-
+.cart-product-item {
+	width: 100%;
+	height: 50px; /* Ajusta el tamaño según tus necesidades */
+	/* Otros estilos adicionales */
+  }
+  
 .btn-clear-all {
 	border: none;
 	background-color: #000;
@@ -211,7 +334,6 @@ h1 {
 	padding: 15px 0;
 	display: block;
 	width: 100%;
-	margin-top: 10px;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	font-family: inherit;
@@ -221,7 +343,7 @@ h1 {
 }
 
 .btn-clear-all:hover{
-  background-color: #333;
+  background-color: #ff0000;
   transform: scale(1.03);
   border-radius: 0;
 }
@@ -245,7 +367,7 @@ h1 {
   margin-right: 10px;
   margin-left: 40px;
   margin-bottom: -10px;
-  color: #0d3c1f;
+  color: #00ff62;
   justify-content: space-between;
   text-align: justify;
   font-weight: bold;
@@ -259,7 +381,7 @@ ul {
 }
 .col h2{
 	margin-top: 20px;
-    color: #000000;
+    color: #ffffff;
     margin-right: 80px;
     margin-left: 80px;
     margin-bottom: -20px;
@@ -281,25 +403,50 @@ ul {
 	display: flex;
 	justify-content: end;
 	align-items: center;
+	
 }
 .contacimg{
 	width: 50px;
 	height: 50px;
 }
+
 /* login */
 .username{
 	color: rgb(255, 0, 0);
 }
 .login_container {
 	display: flex;
-	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 250px;
-
+	background-image: url("https://agriculturasostenible.mx/wp-content/uploads/2021/08/foto_agricultura-scaled.jpg");
+	background-repeat: no-repeat;
+	background-size: 100% ; 
+	background-position: center;
   }
+  
+  
+ hr{
+	background-color: #00ff0d;
+ }
+  .login_form{
+	
+
+	margin: 20px 30px 50px 10px;
+	background: rgba(35, 33, 33, 0.1);
+	width: 70vh;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 0 8px 32px 0 rgba(26, 255, 0, 0.37);
+	backdrop-filter: blur(8.5px);
+	border-radius: 10px;
+  }
+  
+  
   h2{
-	color: #333;
+	color: #ffffff;
 	text-decoration: overline;
   }
   
@@ -337,8 +484,8 @@ ul {
   }
   
   .login_form button:hover {
-	background-color: #000000;
-	color: #fff;
+	background-color: #4dff00;
+	color: #ff0000;
 	text-decoration: line-through;
   }
   
@@ -358,13 +505,14 @@ ul {
 		width: 50px;
 		height: 50px;
 	}
-	.container-cart-products {
-		top: 40px;
-		right: 40px;
-		width: 400%;
-		
+	.precio-producto-carrito {
+		font-weight: 200px;
+		font-size: 20px;
+		margin-left: 10px;
 	}
-
+	
+	
+	
 	.cart-product {
 		padding: 20px;
 	}
